--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsvHelper" version="18.0.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="CsvHelper" version="2.14.0" targetFramework="net20" />
+  <package id="NPOI" version="2.3.0" targetFramework="net20" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net40" requireReinstallation="true" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net20" />
 </packages>
