--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsvHelper" version="2.14.0" targetFramework="net20" />
-  <package id="NPOI" version="2.3.0" targetFramework="net20" />
-  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net40" requireReinstallation="true" />
+  <package id="NPOI" version="2.3.0" targetFramework="net20" requireReinstallation="true" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net20" />
 </packages>
